--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "@playwright/test": "^1.29.1"
   },
   "dependencies": {
-    "puppeteer": "^19.4.1"
+    "bip39": "^3.0.4",
+    "ethereumjs-util": "^7.1.5",
+    "hdkey": "^2.0.1",
+    "puppeteer": "^19.4.1",
+    "web3": "^1.8.1"
   }
 }
